[tool.poetry]
name = "website"
version = "0.1.0"
description = ""
authors = ["Christina Hedges <christina.l.hedges@nasa.gov>"]

[tool.poetry.dependencies]
python = "^3.9"
mkdocs = "^1.2.3"
mkdocs-material = "^8.0.5"
mkdocstrings = "^0.16.2"
mkdocs-autolinks-plugin = "^0.4.0"
mkdocs-include-markdown-plugin = "^3.2.3"
mkdocs-table-reader-plugin = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
